--- a/main.css
+++ b/main.css
@@ -1,1 +1,86 @@
+@charset "UTF-8";
+/* ************************************************************************* *
+ *                                                                           *
+ * Base                                                                      *
+ *                                                                           *
+ * ************************************************************************* */
+/* ********************************* *
+   Normalize
+ * ********************************* */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;1,500&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  text-decoration: none;
+  border: none;
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  color: #FFFFFF;
+}
+
+h1 {
+  font-size: 40px;
+  line-height: 49px;
+  font-weight: 700;
+  margin: 60px 0 30px 0;
+}
+
+
+
+}
+
+h2 {
+  font-size: 28px;
+  line-height: 35px;
+  margin: 30px 0 16px 0;
+  font-weight: 700;
+}
+
+
+
+
+
+h3 {
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 20px;
+  font-weight: 700;
+  color: #FFFFFF;
+}
+
+
+h4 {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+
+
+
+
+
+/* ********************************* *
+   Header
+ * ********************************* */
+body > header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  background-color: #262b2c;
+  border-bottom: 2px solid #FA3B51;
+}
+
+
+
 
