--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ h1 {
 
 
 
-}
+
 
 h2 {
   font-size: 28px;
@@ -80,7 +80,121 @@ body > header {
   background-color: #262b2c;
   border-bottom: 2px solid #FA3B51;
 }
+@media (min-width: 768px) {
+  body > header {
+    padding: 36px 50px 36px 38px;
+  }
+}
+body > header a {
+  font-size: 15px;
+  line-height: 19px;
+  font-weight: 500;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+@media (min-width: 768px) {
+  body > header a {
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+body > header a.header__home {
+  position: relative;
+  padding: 8px 12px;
+  font-weight: 700;
+}
+@media (min-width: 768px) {
+  body > header a.header__home {
+    margin-right: 76px;
+  }
+  body > header a.header__home:after {
+    display: block;
+    position: absolute;
+    content: "";
+    width: 2px;
+    top: 0;
+    right: -38px;
+    bottom: 0;
+    background-color: #CFCFCF;
+  }
+}
+@media (min-width: 768px) {
+  body > header .burger-toggle {
+    display: none;
+  }
+}
+body > header nav {
+  flex-grow: 1;
+  width: 100%;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out 0s, opacity 0.2s linear;
+}
+body > header nav.nav__mobile-open {
+  max-height: 500px;
+  opacity: 1;
+  transition: max-height 0.5s ease-in, opacity 0.2s linear 0.2s;
+}
+@media (min-width: 768px) {
+  body > header nav {
+    width: fit-content;
+    max-height: initial;
+    opacity: 1;
+  }
+}
+body > header nav ul {
+  display: flex;
+  flex-direction: column;
+  padding-top: 15px;
+  margin-top: 15px;
+  list-style-type: none;
+}
+@media (min-width: 768px) {
+  body > header nav ul {
+    flex-direction: row;
+    padding: 0;
+  }
+}
+body > header nav ul li {
+  display: block;
+  position: relative;
+}
+body > header nav ul li.nav__current:after {
+  display: block;
+  position: absolute;
+  bottom: 6px;
+  left: 12px;
+  content: "";
+  height: 3px;
+  width: 26px;
+  border-radius: 2px;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+}
+@media (min-width: 768px) {
+  body > header nav ul li.nav__current:after {
+    left: 0;
+    right: 0;
+  }
+}
+body > header nav ul li.nav__current a {
+  font-weight: 700;
+}
+body > header nav ul li a {
+  display: block;
+  width: 100%;
+  padding: 16px 12px;
+}
+body > header a.header__download {
+  display: none;
+  margin: 0 auto;
+}
+@media (min-width: 1200px) {
+  body > header a.header__download {
+    display: block;
+  }
 
 
 
-
+}
